cmake_minimum_required(VERSION 3.20)
project(zlfft)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(ACCURACY_MID_CFFT_TEST "Accuracy Mid CFFT Test" OFF)
option(ACCURACY_MID_RFFT_TEST "Accuracy Mid RFFT Test" OFF)
option(ACCURACY_CFFT_TEST "Accuracy CFFT Test" OFF)
option(ACCURACY_RFFT_TEST "Accuracy RFFT Test" OFF)
option(THROUGHPUT_CFFT_TEST "Throughput CFFT Test" OFF)
option(THROUGHPUT_RFFT_TEST "Throughput RFFT Test" OFF)
option(USE_AVX2 "Use AVX2 for benchmarking" OFF)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
    set(GLOBAL_ARCH_FLAGS "-march=armv8-a+simd")
else ()
    if (MSVC)
        if (USE_AVX2)
            set(GLOBAL_ARCH_FLAGS "/arch:AVX2")
        endif()
    else()
        if (USE_AVX2)
            set(GLOBAL_ARCH_FLAGS "-march=x86-64-v3 -maes -mpclmul")
        else ()
            set(GLOBAL_ARCH_FLAGS "-march=x86-64-v2 -maes -mpclmul")
        endif ()
    endif ()
endif ()

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GLOBAL_ARCH_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GLOBAL_ARCH_FLAGS}")


if (ACCURACY_MID_CFFT_TEST)
    add_executable(zlfft_accuracy_mid_cfft benchmark/accuracy_mid_cfft.cpp)
endif ()
if (ACCURACY_MID_RFFT_TEST)
    add_executable(zlfft_accuracy_mid_rfft benchmark/accuracy_mid_rfft.cpp)
endif ()
if (ACCURACY_CFFT_TEST)
    add_executable(zlfft_accuracy_cfft benchmark/accuracy_cfft.cpp)
endif ()
if (ACCURACY_RFFT_TEST)
    add_executable(zlfft_accuracy_rfft benchmark/accuracy_rfft.cpp)
endif ()
if (THROUGHPUT_CFFT_TEST)
    add_executable(zlfft_throughput_cfft benchmark/throughput_cfft.cpp)

    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing Google benchmark's tests" FORCE)
    set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Suppressing Google benchmark's install" FORCE)
    set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Suppressing Google benchmark's dependencies downloading" FORCE)
    add_subdirectory(google/benchmark)
    target_link_libraries(zlfft_throughput_cfft PRIVATE benchmark::benchmark)
endif ()

if (THROUGHPUT_RFFT_TEST)
    add_executable(zlfft_throughput_rfft benchmark/throughput_rfft.cpp)

    if (NOT TARGET benchmark::benchmark)
        set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing Google benchmark's tests" FORCE)
        set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Suppressing Google benchmark's install" FORCE)
        set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Suppressing Google benchmark's dependencies downloading" FORCE)
        add_subdirectory(google/benchmark)
    endif ()
    target_link_libraries(zlfft_throughput_rfft PRIVATE benchmark::benchmark)
endif ()



set(ZLFFT_TARGETS)
if (TARGET zlfft_throughput_cfft)
    list(APPEND ZLFFT_TARGETS zlfft_throughput_cfft)
endif ()
if (TARGET zlfft_throughput_rfft)
    list(APPEND ZLFFT_TARGETS zlfft_throughput_rfft)
endif ()
if (TARGET zlfft_accuracy_cfft)
    list(APPEND ZLFFT_TARGETS zlfft_accuracy_cfft)
endif ()
if (TARGET zlfft_accuracy_rfft)
    list(APPEND ZLFFT_TARGETS zlfft_accuracy_rfft)
endif ()


foreach(_tgt ${ZLFFT_TARGETS})
    target_include_directories(${_tgt} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
endforeach()

if (USE_DOUBLE)
    foreach(_tgt ${ZLFFT_TARGETS})
        target_compile_definitions(${_tgt} PRIVATE USE_DOUBLE)
    endforeach()
endif ()

# Algorithm selection flags (applied to all targets)
set(ZLFFT_ALGO_OPTIONS
    ENABLE_ZLDSP
)

foreach(_algo ${ZLFFT_ALGO_OPTIONS})
    option(${_algo} "Enable ${_algo}" OFF)
    if (${_algo})
        foreach(_tgt ${ZLFFT_TARGETS})
            target_compile_definitions(${_tgt} PRIVATE ${_algo})
        endforeach()
    endif ()
endforeach()

option(ENABLE_PFFFT "Enable pffft" OFF)
if (ENABLE_PFFFT)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(PFFFT_USE_SIMD_NEON ON CACHE BOOL "Enable neon in pffft" FORCE)
    else ()
        if (USE_AVX2)
            set(DISABLE_SIMD_AVX OFF CACHE BOOL "Enable AVX in pffft" FORCE)
        else ()
            set(DISABLE_SIMD_AVX ON CACHE BOOL "Disable AVX in pffft" FORCE)
        endif ()
    endif ()
    add_subdirectory(pffft_impl/pffft)
    foreach(_tgt ${ZLFFT_TARGETS})
        target_link_libraries(${_tgt} PRIVATE PFFFT)
        target_compile_definitions(${_tgt} PRIVATE ENABLE_PFFFT)
    endforeach()
endif ()

option(ENABLE_VDSP "Enable vDSP" OFF)
if (ENABLE_VDSP)
    find_library(ACCELERATE_FRAMEWORK Accelerate)
    if (NOT ACCELERATE_FRAMEWORK)
        message(FATAL_ERROR "Apple vDSP NOT FOUND.")
    endif()
    foreach(_tgt ${ZLFFT_TARGETS})
        target_link_libraries(${_tgt} PRIVATE ${ACCELERATE_FRAMEWORK})
        target_compile_definitions(${_tgt} PRIVATE ENABLE_VDSP)
    endforeach()
endif ()

option(ENABLE_VDSP_STRIDE_2 "Enable vDSP stride 2" OFF)
if (ENABLE_VDSP_STRIDE_2)
    find_library(ACCELERATE_FRAMEWORK Accelerate)
    if (NOT ACCELERATE_FRAMEWORK)
        message(FATAL_ERROR "Apple vDSP NOT FOUND.")
    endif()
    foreach(_tgt ${ZLFFT_TARGETS})
        target_link_libraries(${_tgt} PRIVATE ${ACCELERATE_FRAMEWORK})
        target_compile_definitions(${_tgt} PRIVATE ENABLE_VDSP_STRIDE_2)
    endforeach()
endif ()

option(ENABLE_IPP "Enable Intel IPP" OFF)
if (ENABLE_IPP)
    foreach(_tgt ${ZLFFT_TARGETS})
        if (USE_AVX2)
            target_compile_definitions(${_tgt} PRIVATE IPP_USE_AVX2)
        endif()
    endforeach()
    if(WIN32)
        set(IPP_ROOT "$ENV{USERPROFILE}/.nuget/packages/intelipp.static.win-x64/2022.3.0.387")
        set(IPP_INC "${IPP_ROOT}/build/native/include/ipp")
        set(IPP_LIB "${IPP_ROOT}/build/native/win-x64/")
        set(IPP_LIBS ippsmt ippcoremt ippimt ippcvmt ippvmmt)
    elseif(APPLE)
        set(MAC_IPP_ROOT "$ENV{HOME}/.nuget/packages/intelipp.mac/2021.2.0/static/lib/native")
        
        set(IPP_INC "${MAC_IPP_ROOT}/include")
        set(IPP_LIB "${MAC_IPP_ROOT}/osx-x64")
        
        set(IPP_LIBS ipps ippcore ippi ippcv ippvm)
        set(IPP_ROOT "${IPP_INC}")
        
        message(STATUS "Forced Mac IPP Headers at: ${IPP_INC}")
        message(STATUS "Forced Mac IPP Libraries at: ${IPP_LIB}")
    elseif(UNIX)
        set(LINUX_IPP_ROOT "$ENV{HOME}/.nuget/packages/intelipp.static.linux-x64/2021.2.0.233")
        
        if (EXISTS "${LINUX_IPP_ROOT}")
            set(IPP_INC "${LINUX_IPP_ROOT}/lib/native/include")
            set(IPP_LIB "${LINUX_IPP_ROOT}/lib/native/linux-x64")
            
            set(IPP_LIBS ipps ippcore ippi ippcv ippvm)
            set(IPP_ROOT "${IPP_INC}")
            
            message(STATUS "Forced Linux IPP Headers at: ${IPP_INC}")
            message(STATUS "Forced Linux IPP at: ${IPP_LIB}")
        else()
            message(FATAL_ERROR "Intel IPP headers or libraries NOT FOUND.")
        endif()
    endif()
    if (IS_DIRECTORY "${IPP_ROOT}")
        message(STATUS "INTEL IPP FOUND at ${IPP_ROOT}")
        foreach(_tgt ${ZLFFT_TARGETS})
            target_include_directories(${_tgt} PRIVATE "${IPP_INC}")
            target_link_directories(${_tgt} PRIVATE "${IPP_LIB}")
            target_link_libraries(${_tgt} PRIVATE ${IPP_LIBS})
            target_compile_definitions(${_tgt} PRIVATE ENABLE_IPP)
        endforeach()
    else ()
        message(FATAL_ERROR "INTEL IPP NOT LOADED: ${IPP_ROOT} was not found")
    endif ()
endif ()

option(ENABLE_KFR "Enable kfr" OFF)
if (ENABLE_KFR)
    set(KFR_USE_BOOST_MATH OFF CACHE BOOL "Disable Boost Math usage in kfr" FORCE)
    set(KFR_USE_BOOST OFF CACHE BOOL "Disable Boost usage in kfr" FORCE)
    set(KFR_ENABLE_MULTIARCH OFF CACHE BOOL "Disable kfr SIMD runtime dispatch" FORCE)
    if(NOT (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64"))
        set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "Set to OSX x86_64" FORCE)
        if (USE_AVX2)
            set(KFR_ARCH "avx2" CACHE STRING "Set SIMD set to AVX2 in kfr" FORCE)
        else ()
            set(KFR_ARCH "sse42" CACHE STRING "Set SIMD set to SSE42 in kfr" FORCE)
        endif ()
    endif()
    add_subdirectory(kfr_impl/kfr)
    foreach(_tgt ${ZLFFT_TARGETS})
        target_link_libraries(${_tgt} PRIVATE kfr kfr_dft)
        target_compile_definitions(${_tgt} PRIVATE ENABLE_KFR)
    endforeach()
endif ()

option(ENABLE_FFTW3 "Enable fftw3" OFF)
option(ENABLE_FFTW3_ESTIMATE "Enable fftw3 estimate" OFF)
if (ENABLE_FFTW3 OR ENABLE_FFTW3_ESTIMATE)
    set(BUILD_TESTS OFF CACHE BOOL "Disable fftw3 tests" FORCE)
    if (USE_DOUBLE)
        set(ENABLE_FLOAT OFF CACHE BOOL "Disable single precision support in fftw3" FORCE)
        set(FFTW_TARGET fftw3)
    else ()
        set(ENABLE_FLOAT ON CACHE BOOL "Enable single precision support in fftw3" FORCE)
        set(FFTW_TARGET fftw3f)
    endif()

    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(ENABLE_NEON ON CACHE BOOL "Enable NEON in fftw3" FORCE)
    else ()
        if (USE_AVX2)
            set(ENABLE_SSE2 OFF CACHE BOOL "Disable SSE2 in fftw3" FORCE)
            set(ENABLE_AVX2 ON CACHE BOOL "Enable AVX2 in fftw3" FORCE)
        else ()
            set(ENABLE_SSE2 ON CACHE BOOL "Enable SSE2 in fftw3" FORCE)
            set(ENABLE_AVX OFF CACHE BOOL "Disable AVX in fftw3" FORCE)
            set(ENABLE_AVX2 OFF CACHE BOOL "Disable AVX2 in fftw3" FORCE)
        endif ()
    endif ()

    if (NOT TARGET ${FFTW_TARGET})
        add_subdirectory(fftw3_impl/fftw3 EXCLUDE_FROM_ALL)
    endif ()

    if (TARGET ${FFTW_TARGET})
        get_target_property(_fftw_defs ${FFTW_TARGET} COMPILE_DEFINITIONS)
        if (_fftw_defs)
            list(REMOVE_ITEM _fftw_defs "/bigobj")
            set_target_properties(${FFTW_TARGET} PROPERTIES COMPILE_DEFINITIONS "${_fftw_defs}")
        endif()

        if (MSVC)
            target_compile_options(${FFTW_TARGET} PRIVATE "/bigobj")
        endif()
    endif()
    foreach(_tgt ${ZLFFT_TARGETS})
        target_link_libraries(${_tgt} PRIVATE ${FFTW_TARGET})
        target_include_directories(${_tgt} PRIVATE fftw3_impl/fftw3/api)
        if (ENABLE_FFTW3)
            target_compile_definitions(${_tgt} PRIVATE ENABLE_FFTW3)
        endif ()
        if (ENABLE_FFTW3_ESTIMATE)
            target_compile_definitions(${_tgt} PRIVATE ENABLE_FFTW3_ESTIMATE)
        endif ()
    endforeach()
endif ()

set(HWY_ENABLE_EXAMPLES OFF CACHE BOOL "Disable Highway examples" FORCE)
set(HWY_ENABLE_TESTS OFF CACHE BOOL "Disable Highway tests" FORCE)
set(HWY_ENABLE_CONTRIB OFF CACHE BOOL "Disable Highway contrib" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "Force static libraries" FORCE)
set(HWY_ENABLE_SHARED OFF CACHE BOOL "Disable Highway shared library" FORCE)

add_subdirectory(google/highway)

foreach(_tgt ${ZLFFT_TARGETS})
    target_link_libraries(${_tgt} PRIVATE hwy)

    if (MSVC)
        target_compile_options(${_tgt} PRIVATE $<$<CONFIG:RELEASE>:/fp:precise>)
    else ()
        target_compile_options(${_tgt} PRIVATE $<$<CONFIG:RELEASE>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
        target_compile_options(${_tgt} PRIVATE $<$<CONFIG:RelWithDebInfo>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
    endif ()
    target_compile_definitions(${_tgt} PRIVATE HWY_COMPILE_ONLY_STATIC)
endforeach()

include(CheckIPOSupported)
check_ipo_supported(RESULT ipo_supported OUTPUT error)

if (ipo_supported)
    if (TARGET zlfft_throughput_cfft)
        set_target_properties(zlfft_throughput_cfft PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    if (TARGET zlfft_throughput_rfft)
        set_target_properties(zlfft_throughput_rfft PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    message(STATUS "LTO/IPO is supported and enabled.")
else ()
    message(WARNING "LTO/IPO is not supported: ${error}")
endif ()

if (ACCURACY_MID_CFFT_TEST AND TARGET zlfft_accuracy_mid_cfft)
    target_include_directories(zlfft_accuracy_mid_cfft PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/benchmark
        ${CMAKE_CURRENT_SOURCE_DIR}/zlfft)

    if (USE_DOUBLE)
        target_compile_definitions(zlfft_accuracy_mid_cfft PRIVATE USE_DOUBLE)
    endif ()

    target_compile_definitions(zlfft_accuracy_mid_cfft PRIVATE HWY_COMPILE_ONLY_STATIC)

    target_link_libraries(zlfft_accuracy_mid_cfft PRIVATE hwy)

    if (NOT TARGET PFFFT)
        if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
            set(PFFFT_USE_SIMD_NEON ON CACHE BOOL "" FORCE)
        else ()
            if (USE_AVX2)
                set(DISABLE_SIMD_AVX OFF CACHE BOOL "" FORCE)
            else ()
                set(DISABLE_SIMD_AVX ON CACHE BOOL "" FORCE)
            endif ()
        endif ()
        add_subdirectory(pffft_impl/pffft)
    endif ()
    target_link_libraries(zlfft_accuracy_mid_cfft PRIVATE PFFFT)

    if (NOT TARGET kfr)
        set(KFR_USE_BOOST_MATH OFF CACHE BOOL "" FORCE)
        set(KFR_USE_BOOST OFF CACHE BOOL "" FORCE)
        set(KFR_ENABLE_MULTIARCH OFF CACHE BOOL "" FORCE)
        if(NOT (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64"))
            set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "" FORCE)
            if (USE_AVX2)
                set(KFR_ARCH "avx2" CACHE STRING "" FORCE)
            else ()
                set(KFR_ARCH "sse42" CACHE STRING "" FORCE)
            endif ()
        endif()
        add_subdirectory(kfr_impl/kfr)
    endif ()
    target_link_libraries(zlfft_accuracy_mid_cfft PRIVATE kfr kfr_dft)

    set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
    if (USE_DOUBLE)
        set(ENABLE_FLOAT OFF CACHE BOOL "" FORCE)
        set(FFTW_MID_TARGET fftw3)
    else ()
        set(ENABLE_FLOAT ON CACHE BOOL "" FORCE)
        set(FFTW_MID_TARGET fftw3f)
    endif()
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(ENABLE_NEON ON CACHE BOOL "" FORCE)
    else ()
        if (USE_AVX2)
            set(ENABLE_SSE2 OFF CACHE BOOL "" FORCE)
            set(ENABLE_AVX2 ON CACHE BOOL "" FORCE)
        else ()
            set(ENABLE_SSE2 ON CACHE BOOL "" FORCE)
            set(ENABLE_AVX OFF CACHE BOOL "" FORCE)
            set(ENABLE_AVX2 OFF CACHE BOOL "" FORCE)
        endif ()
    endif ()
    if (NOT TARGET ${FFTW_MID_TARGET})
        add_subdirectory(fftw3_impl/fftw3 EXCLUDE_FROM_ALL)
    endif ()
    if (TARGET ${FFTW_MID_TARGET})
        get_target_property(_fftw_mid_defs ${FFTW_MID_TARGET} COMPILE_DEFINITIONS)
        if (_fftw_mid_defs)
            list(REMOVE_ITEM _fftw_mid_defs "/bigobj")
            set_target_properties(${FFTW_MID_TARGET} PROPERTIES COMPILE_DEFINITIONS "${_fftw_mid_defs}")
        endif()
    endif()
    target_link_libraries(zlfft_accuracy_mid_cfft PRIVATE ${FFTW_MID_TARGET})
    target_include_directories(zlfft_accuracy_mid_cfft PRIVATE fftw3_impl/fftw3/api)

    if (MSVC)
        target_compile_options(zlfft_accuracy_mid_cfft PRIVATE $<$<CONFIG:RELEASE>:/fp:precise>)
    else ()
        target_compile_options(zlfft_accuracy_mid_cfft PRIVATE $<$<CONFIG:RELEASE>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
        target_compile_options(zlfft_accuracy_mid_cfft PRIVATE $<$<CONFIG:RelWithDebInfo>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
    endif ()
    if (ipo_supported)
        set_target_properties(zlfft_accuracy_mid_cfft PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif ()
endif ()

if (ACCURACY_MID_RFFT_TEST AND TARGET zlfft_accuracy_mid_rfft)
    target_include_directories(zlfft_accuracy_mid_rfft PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/benchmark
        ${CMAKE_CURRENT_SOURCE_DIR}/zlfft)

    if (USE_DOUBLE)
        target_compile_definitions(zlfft_accuracy_mid_rfft PRIVATE USE_DOUBLE)
    endif ()

    target_compile_definitions(zlfft_accuracy_mid_rfft PRIVATE HWY_COMPILE_ONLY_STATIC)

    target_link_libraries(zlfft_accuracy_mid_rfft PRIVATE hwy)

    if (NOT TARGET PFFFT)
        if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
            set(PFFFT_USE_SIMD_NEON ON CACHE BOOL "" FORCE)
        else ()
            if (USE_AVX2)
                set(DISABLE_SIMD_AVX OFF CACHE BOOL "" FORCE)
            else ()
                set(DISABLE_SIMD_AVX ON CACHE BOOL "" FORCE)
            endif ()
        endif ()
        add_subdirectory(pffft_impl/pffft)
    endif ()
    target_link_libraries(zlfft_accuracy_mid_rfft PRIVATE PFFFT)

    if (NOT TARGET kfr)
        set(KFR_USE_BOOST_MATH OFF CACHE BOOL "" FORCE)
        set(KFR_USE_BOOST OFF CACHE BOOL "" FORCE)
        set(KFR_ENABLE_MULTIARCH OFF CACHE BOOL "" FORCE)
        if(NOT (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64"))
            set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "" FORCE)
            if (USE_AVX2)
                set(KFR_ARCH "avx2" CACHE STRING "" FORCE)
            else ()
                set(KFR_ARCH "sse42" CACHE STRING "" FORCE)
            endif ()
        endif()
        add_subdirectory(kfr_impl/kfr)
    endif ()
    target_link_libraries(zlfft_accuracy_mid_rfft PRIVATE kfr kfr_dft)

    set(BUILD_TESTS OFF CACHE BOOL "" FORCE)
    if (USE_DOUBLE)
        set(ENABLE_FLOAT OFF CACHE BOOL "" FORCE)
        set(FFTW_MID_TARGET fftw3)
    else ()
        set(ENABLE_FLOAT ON CACHE BOOL "" FORCE)
        set(FFTW_MID_TARGET fftw3f)
    endif()
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
        set(ENABLE_NEON ON CACHE BOOL "" FORCE)
    else ()
        if (USE_AVX2)
            set(ENABLE_SSE2 OFF CACHE BOOL "" FORCE)
            set(ENABLE_AVX2 ON CACHE BOOL "" FORCE)
        else ()
            set(ENABLE_SSE2 ON CACHE BOOL "" FORCE)
            set(ENABLE_AVX OFF CACHE BOOL "" FORCE)
            set(ENABLE_AVX2 OFF CACHE BOOL "" FORCE)
        endif ()
    endif ()
    if (NOT TARGET ${FFTW_MID_TARGET})
        add_subdirectory(fftw3_impl/fftw3 EXCLUDE_FROM_ALL)
    endif ()
    if (TARGET ${FFTW_MID_TARGET})
        get_target_property(_fftw_mid_defs ${FFTW_MID_TARGET} COMPILE_DEFINITIONS)
        if (_fftw_mid_defs)
            list(REMOVE_ITEM _fftw_mid_defs "/bigobj")
            set_target_properties(${FFTW_MID_TARGET} PROPERTIES COMPILE_DEFINITIONS "${_fftw_mid_defs}")
        endif()
    endif()
    target_link_libraries(zlfft_accuracy_mid_rfft PRIVATE ${FFTW_MID_TARGET})
    target_include_directories(zlfft_accuracy_mid_rfft PRIVATE fftw3_impl/fftw3/api)

    if (MSVC)
        target_compile_options(zlfft_accuracy_mid_rfft PRIVATE $<$<CONFIG:RELEASE>:/fp:precise>)
    else ()
        target_compile_options(zlfft_accuracy_mid_rfft PRIVATE $<$<CONFIG:RELEASE>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
        target_compile_options(zlfft_accuracy_mid_rfft PRIVATE $<$<CONFIG:RelWithDebInfo>:-O3 -ffp-contract=fast -fno-signed-zeros -freciprocal-math>)
    endif ()
    if (ipo_supported)
        set_target_properties(zlfft_accuracy_mid_rfft PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif ()
endif ()
